--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,4 +1,5 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>login</td><td>ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@8bd1b6a]<br/></td></tr>
-<tr><td>smoke</td><td>ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@8bd1b6a]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>login</td><td>InvalidLogin.testInvalidLogin()[pri:2, instance:script.InvalidLogin@c038203]<br/>InvalidLogin.testInvalidLogin()[pri:2, instance:script.InvalidLogin@1e88b3c]<br/>ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@cc285f4]<br/>ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@42d80b78]<br/></td></tr>
+<tr><td>product</td><td>VerifyProductVersion.testProductVersion()[pri:3, instance:script.VerifyProductVersion@55f3ddb1]<br/>VerifyProductVersion.testProductVersion()[pri:3, instance:script.VerifyProductVersion@3bfdc050]<br/></td></tr>
+<tr><td>smoke</td><td>ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@cc285f4]<br/>ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@42d80b78]<br/></td></tr>
 </table>
