--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fb9ab6">  <td>17/10/12 08:56:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication()[pri:0, instance:script.ValidLogin@8bd1b6a]">&gt;&gt;openApplication</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="9f9fb0">  <td>17/10/12 08:56:55</td>   <td>5698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@8bd1b6a]">testValidLogin</td> 
-  <td>main@89387388</td>   <td></td> </tr>
-<tr bgcolor="fb9ab6">  <td>17/10/12 08:56:57</td>   <td>7512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:script.ValidLogin@8bd1b6a]">&lt;&lt;closeApplication</td> 
-<td>&nbsp;</td>  <td>main@89387388</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:55:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication(java.lang.String, java.lang.String)[pri:0, instance:script.ValidLogin@42d80b78]">&gt;&gt;openApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@2043680257</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:55:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication(java.lang.String, java.lang.String)[pri:0, instance:script.ValidLogin@cc285f4]">&gt;&gt;openApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1299904300</td>   <td></td> </tr>
+<tr bgcolor="61f5df">  <td>17/10/13 09:56:14</td>   <td>55842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.testValidLogin()[pri:1, instance:script.ValidLogin@cc285f4]">testValidLogin</td> 
+  <td>TestNG-tests-1@1299904300</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:17</td>   <td>59500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:script.ValidLogin@42d80b78]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@2043680257</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:17</td>   <td>59505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication(java.lang.String, java.lang.String)[pri:0, instance:script.InvalidLogin@1e88b3c]">&gt;&gt;openApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@2043680257</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:19</td>   <td>61557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:script.InvalidLogin@1e88b3c]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@2043680257</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:19</td>   <td>61562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication(java.lang.String, java.lang.String)[pri:0, instance:script.VerifyProductVersion@3bfdc050]">&gt;&gt;openApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@2043680257</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:21</td>   <td>62926</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:script.ValidLogin@cc285f4]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1299904300</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:21</td>   <td>63602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:script.VerifyProductVersion@3bfdc050]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@2043680257</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:23</td>   <td>64954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication(java.lang.String, java.lang.String)[pri:0, instance:script.InvalidLogin@c038203]">&gt;&gt;openApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1299904300</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:25</td>   <td>66973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:script.InvalidLogin@c038203]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1299904300</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:26</td>   <td>67835</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.openApplication(java.lang.String, java.lang.String)[pri:0, instance:script.VerifyProductVersion@55f3ddb1]">&gt;&gt;openApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1299904300</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>17/10/13 09:56:28</td>   <td>69853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeApplication()[pri:0, instance:script.VerifyProductVersion@55f3ddb1]">&lt;&lt;closeApplication</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@1299904300</td>   <td></td> </tr>
 </table>
